Actions
Bug #10863
closedidm: comparison between pointer and integer
Start date:
2019-04-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Debug build with NULL pointer:
In file included from ../../common/sys/model.h:35:0, from ../../common/sys/resource.h:221, from ../../common/sys/user.h:73, from ../../common/sys/proc.h:36, from ../../common/sys/systm.h:40, from ../../common/sys/conf.h:57, from ../../common/io/idm/idm_text.c:27: ../../common/io/idm/idm_text.c: In function 'idm_pdu_list_to_nvlist': ../../common/io/idm/idm_text.c:1549:26: error: comparison between pointer and integer [-Werror] ASSERT(split_kvbuflen != NULL); ^ ../../common/sys/debug.h:59:29: note: in definition of macro 'ASSERT' #define ASSERT(EX) ((void)((EX) || assfail(#EX, __FILE__, __LINE__))) ^~ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2fcabb599ef45ae10a2847045a10486dd69b9b84
commit 2fcabb599ef45ae10a2847045a10486dd69b9b84 Author: Toomas Soome <tsoome@me.com> Date: 2019-05-15T20:05:16.000Z 10863 idm: comparison between pointer and integer Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions